--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,20 +36,17 @@ dependencies:
   flutter_riverpod: ^2.1.3
   dio: ^4.0.6
   dartz: ^0.10.1
-  provider: ^6.0.5
+  dartx: ^1.1.0
+  hive_flutter: ^1.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.0
   flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
